Bug 1666698 - Only synchronise textures after a copy serially. r=mattwoodrow

Attempt to lock textures from the same D3D11 devices on multiple threads at once can lead to deadlocks as observed with AMD cards.

Differential Revision: https://phabricator.services.mozilla.com/D91098